--- a/source/_posts/20210319-技术探索.md
+++ b/source/_posts/20210319-技术探索.md
@@ -1,6 +1,12 @@
 ---
-title: 【技术探索】
+title: 【技术探索一】
 tags: [技术探索]
+
+author: Yude Bai
+date: 2021-03-18
+img: /medias/featureimages/25.jpg
+summary: hexo + github action + git 配置个人博客网站
+
 toc: true
 ---
 
@@ -50,7 +56,7 @@ https://segmentfault.com/a/1190000018624911?utm_source=tag-newest)，修改 "_co
 
 ## 5、自定义模板相关
 [看板设置](
-https://segmentfault.com/a/1190000018624911?utm_source=tag-newest)，需要修改 "_config.yml" 文件。
+https://www.cnblogs.com/cmt/p/14553189.html)，需要修改 "_config.yml" 文件。
 ```
 npm install --save hexo-helper-live2d
 # 安装 live2d
