--- a/source/_posts/20210411-机器学习一.md
+++ b/source/_posts/20210411-机器学习一.md
@@ -43,6 +43,8 @@ toc: true
 参考[LightGBM 教程](https://blog.csdn.net/weixin_38569817/article/details/78808535)。
  - 辅助理解 LightGBM 中的直方图算法等。
  - 安装命令，pip install lightgbm。
+参考[LightGBM 调参](https://blog.csdn.net/olizxq/article/details/89222908)。
+ - sklearn 中 GBDT 和 LightGBM 的参数介绍。
 
 
 ![](https://img-blog.csdnimg.cn/2021041122081610.png#pic_center)
