--- a/source/_posts/20210416-技术探索四.md
+++ b/source/_posts/20210416-技术探索四.md
@@ -28,7 +28,7 @@ text,label
 "Great price.","positive"
 ```
 
-- output 选择 csv 格式，导出格式为：
+- output 选择 csv 格式，导出格式为（官网样例，实际使用时会更详细）：
  
 ```
 id,text,label,user
@@ -39,7 +39,7 @@ id,text,label,user
 
 ## 3、设置 label 格式
 - label 规模不大时手工提取设置即可。
-- 其 json 格式为：
+- 其 json 格式为（官网样例，实际使用时会更详细）：
 
 ```
 [
