--- a/source/_posts/20210601-技术探索五.md
+++ b/source/_posts/20210601-技术探索五.md
@@ -47,6 +47,12 @@ load csv with headers from 'file:///test2.csv' as line2
 create (:Node2 {name: line2.node, attribute:line2.attribute});
 ```
 
+- 更新节点属性，代码如下：
+```
+load csv with headers from 'file:///test3.csv' as line1
+match (n:Node1) where n.name = line1.name set n.label = line1.label, n.semantic=line1.semantic return n;
+```
+
 
 ![](https://img-blog.csdnimg.cn/20210601115930711.png)
 
