--- a/source/_posts/20210317-技术探索一.md
+++ b/source/_posts/20210317-技术探索一.md
@@ -12,7 +12,7 @@ toc: true
 
 # :whale: hexo + github action + git 配置个人博客网站 :whale:
 
-## 1、Overflow
+## 1、Workflow
 [完整配置参考视频](https://www.bilibili.com/video/BV1dt4y1Q7UE?from=search&seid=14792497382015603750)，以及该[视频对应的笔记](https://www.jianshu.com/p/97dfbc8e79db)。
 
 
