--- a/source/_posts/20211123-编译免杀五.md
+++ b/source/_posts/20211123-编译免杀五.md
@@ -35,7 +35,7 @@ AVCLASS 和 AVCLASS2 都用于标注 Android malware family。作者及其团队
 
 
 ## 3、使用示例一
-两种工具都支持 VirusTotal v2 API JSON reports (-vt file)。
+两种工具都支持 VirusTotal v2 API JSON reports (-vt file)。以下示例仅以 AVCLASS2 为例，如使用 AVCLASS 只需替换 ```./avclass2/avclass2_labeler.py``` 为 ```./avclass/avclass_labeler.py```。
 
 vtv2 sample 详见 [Github](https://github.com/malicialab/avclass) 中提供的 ```avclass-master/examples/vtv2_sample.json``` 文件。
 
@@ -65,7 +65,7 @@ vtv2 sample 详见 [Github](https://github.com/malicialab/avclass) 中提供的 
 
 
 ## 4、使用示例二
-两种工具都支持 VirusTotal v3 API JSON reports (-vt file -vt3)。
+两种工具都支持 VirusTotal v3 API JSON reports (-vt file -vt3)。以下示例仅以 AVCLASS2 为例，如使用 AVCLASS 只需替换 ```./avclass2/avclass2_labeler.py``` 为 ```./avclass/avclass_labeler.py```。
 
 vtv3 sample 详见 [Github](https://github.com/malicialab/avclass) 中提供的 ```avclass-master/examples/vtv3_sample.json``` 文件。
 
