--- a/source/_posts/20211211-模型解释一.md
+++ b/source/_posts/20211211-模型解释一.md
@@ -58,7 +58,10 @@ toc: true
  - R 相关库的安装。```importr('genlasso')``` 可能会报错，此时需要启动 R 并执行 ```install.packages('genlasso')```，如下所示。
  ![安装 R 库 genlasso](https://img-blog.csdnimg.cn/8e515e9fed9d46b0910fbcb272b36c52.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5qC55Y-35Zub562J5LqO5LqM,size_18,color_FFFFFF,t_70,g_se,x_16#pic_center)
  - python2 到 python3 的修改 2。待续。
-
+ ```
+ (1) IndexError: arrays used as indices must be of integer (or boolean) type
+     self.seq_len / 2 -> int(self.seq_len / 2)
+ ```
 
 
 ![](https://img-blog.csdnimg.cn/3d484f31cb4c460ab688276ff6376213.png#pic_center)
