--- a/source/_posts/20211219-模型解释三.md
+++ b/source/_posts/20211219-模型解释三.md
@@ -29,7 +29,9 @@ XAI (eXplainable Artificial Intelligence) 是 Gartner 2019 给定的十大数据
 
 ![模型的预测性能与可解释性](https://img-blog.csdnimg.cn/2933184a7a0b442480644467efe47941.png)
 
-因此，XAI 技术的目标即：在提供模型可解释性的基础上，保持模型及系统的性能（识别性能、处理性能等）；XAI 系统即需要告知检测结果，还需要回答下图 (参考 [可信任安全智能与可解释性](https://cloud.tencent.com/developer/article/1552173)) 中的 “why” 问题 。
+因此，XAI 技术的目标即：
+ - 在提供模型可解释性的基础上，保持模型及系统的性能（识别性能、处理性能等）；
+ - XAI 系统即需要告知检测结果，还需要回答下图 (参考 [可信任安全智能与可解释性](https://cloud.tencent.com/developer/article/1552173)) 中的 “why” 问题 。
 
 ![XAI 技术的目标](https://img-blog.csdnimg.cn/9dbd25c463c547c8b62796b511ad26a2.png)
 
