--- a/source/_posts/20211218-模型解释二.md
+++ b/source/_posts/20211218-模型解释二.md
@@ -25,7 +25,7 @@ SHAP 示意图如下所示。
 ![SHAP 示意图](https://img-blog.csdnimg.cn/2a54fb59929246a8a4be97dcb128ee30.png#pic_center)
 
 
-## 2、LEMNA 环境配置
+## 2、SHAP 环境配置
 
 本地环境为 WIndows 10 + python 3.6.2。根据 [SHAP source code](https://github.com/slundberg/shap) 直接 ```pip install shap``` 即可。
 
