--- a/source/_posts/20211221-模型解释五.md
+++ b/source/_posts/20211221-模型解释五.md
@@ -31,7 +31,7 @@ toc: true
 ![ablation study of attention layer](https://img-blog.csdnimg.cn/1e36c79156e84ecbb2d5db7c55beae00.png)
 
 当 layer 递增由 1 变化为 4 时，acc 急剧增加并接近最大值，layer 继续增加，acc 则有所下降。
-作者认为浅层的 info 更具象化 (localized)，其所包含的 context 不足以 insure acc。随着 self-attention layer 的增加，info 会逐渐抽象化 (abstract)，以 4~6 layers 为限，acc 最高。随后继续增加 layer，info 则过于抽象，反而会使得 acc 有所下降。
+作者认为浅层的 info 更具象化 (localized)，其所包含的 context 不足以 ensure acc。随着 self-attention layer 的增加，info 会逐渐抽象化 (abstract)，以 4~6 layers 为限，acc 最高。随后继续增加 layer，info 则过于抽象，反而会使得 acc 有所下降。
 
 
 ## 3、BERT 中的 visualization
