--- a/source/_posts/20220121-写作思路一.md
+++ b/source/_posts/20220121-写作思路一.md
@@ -16,7 +16,7 @@ toc: true
 ## 1、常用的图标 --- pifont
 宏包 pifont 内有一些较常用的 latex 图标，如对错号 (&check;)、带圆圈的数字 (① ② ③) 等。这里的 markdown 符号参考 [markdown 常用表达式一](https://blog.csdn.net/appleyuchi/article/details/84036985) (复制 html 源码到 markdown 中) 和 [markdown 常用表达式二](https://blog.csdn.net/konglongdanfo1/article/details/85204312) 。
 
-当引入宏包 ```\usepackage{pifont}``` 后，在 latex 代码中输入 \ding{172} 即表示 ①，输入 \ding{173} 则表示 ②。参考 [LaTeX pifont 宏包符号列表](https://blog.csdn.net/weixin_45502929/article/details/105572624) 。
+当引入宏包 ```\usepackage{pifont}``` 后，在 latex 代码中输入 ```\ding{172}``` 即表示 ①，输入 ```\ding{173}``` 则表示 ②。参考 [LaTeX pifont 宏包符号列表](https://blog.csdn.net/weixin_45502929/article/details/105572624) 。
 
 ![LaTeX pifont 宏包符号列表](https://img-blog.csdnimg.cn/82210cc73a014cedb1d376f89ca7c67b.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5qC55Y-35Zub562J5LqO5LqM,size_9,color_FFFFFF,t_70,g_se,x_16#pic_center)
 
