--- a/source/_posts/20230909-技术探索七.md
+++ b/source/_posts/20230909-技术探索七.md
@@ -61,8 +61,8 @@ Anaconda 安装路径\Library\bin
 
 同上一步打开虚拟环境 python37，并安装 torch，主要包括以下三步：
 
-- 首先，参考 [pytorch-cpu 或 gpu 离线或在线高速下载安装](https://blog.csdn.net/ShenWeiKKX/article/details/103534376) 一文，在 [torch 官网](https://pytorch.org/) 选定对应的 OS、package、language、compute platform 下需要的 **command**，在 Anaconda 的终端输出该命令执行安装操作。
-- 其次，如果属于教育网，一般可以直接完成安装。如果普通网络，需要借助不同的 **源**（如清华源等）进行下载安装。
+- 首先，参考 [pytorch-cpu 或 gpu 离线或在线高速下载安装](https://blog.csdn.net/ShenWeiKKX/article/details/103534376) 一文，在 [torch 官网](https://pytorch.org/) 选定对应的 OS、package、language、compute platform 下需要的 **command**，在 Anaconda 的终端输入该命令执行安装操作。
+- 其次，如果属于教育网，一般可以直接完成安装。如果是普通网络，需要借助不同的 **源**（如清华源等）进行下载安装。
 - 第三，通常 torch 包自身会出现下载超时的问题，此时可参考 [在线＋离线安装 pytorch 经历](https://blog.csdn.net/qq_43556824/article/details/131169115) 一文解决，即从 [清华源](https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/win-64/) 下载 Anaconda 安装失败的 torch 包（约 135MB）并执行 **离线安装**（以下路径为本地安装包路径）:
 ```
 conda install E:\anaconda\pkgs\pytorch-1.13.1-py3.7_cpu_0.tar.bz2
